AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_LIBRARIES = libchd.a

libchd_a_SOURCES = coretypes.h \
	bitstream.c bitstream.h \
    cdrom.c cdrom.h \
    chd.c chd.h \
    flac.c flac.h \
	LzmaEnc.c LzmaEnc.h \
	LzmaDec.c LzmaDec.h \
	LzFind.c LzFind.h \
	LzFindMt.c LzFindMt.h \	
	Threads.c Threads.h \
    huffman.c huffman.h
